# SmartSVM

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DatasetLoader.cpp  DatasetLoader.h  LICENCES  README.md  build_commands.bat.txt  env.yml  main.cpp  module.cpp  pyproject.toml  setup.cfg  setup.py  testing_and_development.txt
AppUtils/: AppUtils.cpp  AppUtils.h  AppUtils.vcxproj  AppUtils.vcxproj.filters  CMakeLists.txt  PythonFeatureSelection.cpp  PythonFeatureSelection.h  Verbosity.h  packages.config
DeevaPythonModule/: CMakeLists.txt  DatasetLoader.h  build_commands.bat.txt
DeevaPythonModule/DeevaPackage/: classifiers.py  data_loader.py
SvmLib/: CMakeLists.txt  EnsembleListSvm.cpp  EnsembleListSvm.h  EnsembleSvm.h  EnumsTranslations.cpp  EnumsTranslations.h  ExtraTreeWrapper.cpp  ExtraTreeWrapper.h  Feature.h  ISvm.h  OpenCvSvm.cpp  OpenCvSvm.h  SvmExceptions.cpp  SvmExceptions.h  SvmFactory.cpp  SvmFactory.h  SvmSigmoid.cpp  SvmSigmoid.h  VotingEnsemble.h  denseLibSvm.cpp  denseLibSvm.h  libSvmImplementation.cpp  libSvmImplementation.h  libSvmInternal.cpp  libSvmInternal.h
TestApp/: CMakeLists.txt  ClashExperiment.h  Commons.h  ConfigGeneration.cpp  ConfigGeneration.h  ConfigParser.h  CustomKernelExperiments.h  Gecco2019.h  LastRegionsScores.h  ManualMetricTests.h  ManualRbfLiniear.h  PSO_and_other.py  PythonPath.h  ReRuns.cpp  ReRuns.h  RunAlgorithm.cpp  RunAlgorithm.h  bin.h  featureSelection.py  main.cpp  mutualInfo.py  restore.py  save.py
libDataset/: CMakeLists.txt  CsvReader.cpp  CsvReader.h  Dataset.h  DatasetBase.h  DatasetExceptions.cpp  DatasetExceptions.h  DatasetView.h  DatasetViewBase.h  IDataset.h  IReadOnlyDataset.h  TabularDataExceptions.cpp  TabularDataExceptions.h  TabularDataProvider.h
libGeneticComponents/: BaseChromosome.cpp  BaseChromosome.h  BaseCrossoverOperator.h  BestFitnessStopCondition.h  BinaryChromosome.h  BinaryChromosomeCache.h  BinaryCrossoverFactory.h  BinaryGenerationFactory.h  BinaryMutationFactory.h  BitFlipMutation.h  CMakeLists.txt  ConsecutiveIterationFitnessBase.h  CrossoverSelectionFactory.h  FactoriesTranslations.cpp  FeaturesSelectionBitFlipMutation.h  FeaturesSelectionOnePointCrossover.h  FeaturesSelectionRandomGeneration.h  GeneticExceptions.cpp  GeneticExceptions.h  GeneticUtils.h  HighLowFitSelection.h  IChromosomeCache.h  ICrossoverSelection.h  IMutationOperator.h  IOperator.h  IPopulationGeneration.h  ISelectionOperator.h  IStopCondition.h  LocalGlobalAdaptationSelection.h  MeanFitnessStopCondition.h  OnePointCrossover.h  Population.h  RandomGeneration.h  SelectionFactory.h  StopConditionFactory.h  TruncationSelection.h  resource.h
libGeneticSvm/: AlgaWorkflow.cpp  AlgaWorkflow.h  AllModelsLogger.h  BigSetsEnsemble.cpp  BigSetsEnsemble.h  BigSetsSvmHelper.cpp  BigSetsSvmHelper.h  CMakeLists.txt  CombinedAlgorithmsConfig.cpp  CombinedAlgorithmsConfig.h  CustomKernelWorkflow.cpp  CustomKernelWorkflow.h  DatasetLoaderHelper.cpp  DatasetLoaderHelper.h  DefaultWorkflowConfigs.cpp  DefaultWorkflowConfigs.h  EnsembleTreeWorkflow.cpp  EnsembleTreeWorkflow.h  EnsembleUtils.cpp  EnsembleUtils.h  EnsembleWorkflow.cpp  EnsembleWorkflow.h  FTGeneticWorkflow.cpp  FTGeneticWorkflow.h  FeatureSelectionWorkflow.cpp  FeatureSelectionWorkflow.h  FeatureSetOptimizationWorkflowFactory.cpp  FeatureSetOptimizationWorkflowFactory.h  GaSvmWorkflow.cpp  GaSvmWorkflow.h  GeneticKernelEvolutionWorkflow.cpp  GeneticKernelEvolutionWorkflow.h  GeneticWorkflowResultLogger.cpp  GeneticWorkflowResultLogger.h  GridSearchWorkflow.cpp  GridSearchWorkflow.h  GridSearchWorkflowOpenCV.cpp  GridSearchWorkflowOpenCV.h  IDatasetLoader.h  IGeneticWorkflow.h  (+47 more)
libPlatform/: CMakeLists.txt  EnumStringConversions.h  ForwardDeclarations.h  InterfaceDeclaration.h  Percent.cpp  Percent.h  PlatformException.cpp  PlatformException.h  StringUtils.cpp  StringUtils.h  Subprocess.cpp  Subprocess.h  SubprocessExceptions.h  Subtree.cpp  Subtree.h  SubtreeExceptions.h  TimeUtils.cpp  TimeUtils.h  Verbosity.h  loguru.cpp  loguru.hpp
libRandom/: CMakeLists.txt  IRandomNumberGenerator.h  MersenneTwister64Rng.cpp  MersenneTwister64Rng.h  RandomExceptions.cpp  RandomExceptions.h  RandomNumberGeneratorFactory.cpp  RandomNumberGeneratorFactory.h
libStrategies/: CMakeLists.txt  DiskFile.cpp  DiskFile.h  FileSinkStrategy.cpp  FileSinkStrategy.h  StrategiesExceptions.h
libSvmComponents/: AddingTrainingSetExamples.h  BaseKernelGridSearch.cpp  BaseKernelGridSearch.h  BaseSvmChromosome.cpp  BaseSvmChromosome.h  CMakeLists.txt  CompensationInformation.cpp  CompensationInformation.h  ConfusionMatrix.cpp  ConfusionMatrix.h  ConfusionMatrixMetrics.h  CrossoverCompensation.cpp  CrossoverCompensation.h  CustomKernelTraining.h  CustomWidthGauss.h  DataNormalization.cpp  DataNormalization.h  EducationOfTrainingSet.cpp  EducationOfTrainingSet.h  Feature.h  FoldCreator.cpp  FoldCreator.h  GaSvmCrossover.cpp  GaSvmCrossover.h  GaSvmGeneration.cpp  GaSvmGeneration.h  GaSvmMutation.cpp  GaSvmMutation.h  GaSvmRegression.h  GeneticAlgorithmsConfigs.cpp  GeneticAlgorithmsConfigs.h  GridSearchCrossValidation.cpp  GridSearchCrossValidation.h  GridSearchImplementation.cpp  GridSearchImplementation.h  HeuristicCrossover.cpp  HeuristicCrossover.h  IFeatureSelection.h  IGroupPropagation.cpp  IGroupPropagation.h  (+105 more)
libSvmStrategies/: CMakeLists.txt  CompensationInformationStrategy.cpp  CompensationInformationStrategy.h  CreateSvmVisualizationStrategy.h  CrossoverCompensationStrategy.cpp  CrossoverCompensationStrategy.h  GridSearchCrossValidationStrategy.cpp  GridSearchCrossValidationStrategy.h  GridSearchPopulationGenerationStrategy.cpp  GridSearchPopulationGenerationStrategy.h  MemeticAdaptationStrategy.cpp  MemeticAdaptationStrategy.h  MemeticEducationStrategy.cpp  MemeticEducationStrategy.h  MemeticFeaturesStrategies.h  NormalizeStrategy.cpp  NormalizeStrategy.h  SuperIndividualCreationStrategy.cpp  SuperIndividualCreationStrategy.h  SvmGridSearchStrategy.cpp  SvmGridSearchStrategy.h  SvmTrainingStrategy.h  UpdateSupportVectorPoolStrategy.cpp  UpdateSupportVectorPoolStrategy.h
tests/: commons.py  (+1 more)
(+59 files in other folders)
