[metadata]
description = TODO
author = Wojciech Dudzik
author_email = wojtek.adam.dudzik@gmail.com
license = MIT

classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: C++
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: Microsoft :: Windows







